feat: Implementar WebSettings robusto para WebView Android
- Adicionar WebViewConfigPackage.kt com configurações robustas de WebView
- Configurar WebSettings compatível com API 21+ (Lollipop)
- Implementar CookieManager com suporte a cookies de terceiros
- Desabilitar controles de zoom conforme especificado
- Configurar User-Agent como Chrome Android 11
- Adicionar condicionais para APIs superiores (Safe Browsing, offscreenPreRaster)
- Registrar package customizado no MainApplication.kt
- Adicionar documentação em WEBSETTINGS_IMPLEMENTATION.md
- Versionar código Android nativo para preservar customizações

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ app-example
 
 # generated native folders
 /ios
-/android
+# /android - Comentado para versionar configurações customizadas do WebView
 
 # IDE
 .vscode/
