Checkpoint: Adicionado scripts automáticos para gerar APK:
Arquivos criados:
- scripts/build-apk.js - Script Node.js para compilar APK
- scripts/build-apk.sh - Script Bash para compilar APK
- BUILD_APK_SIMPLE.md - Guia simples de compilação

Scripts de npm adicionados:
- npm run build:apk - Compila APK localmente
- npm run build:apk:eas - Compila com EAS Build local

Uso:
```bash
cd /home/ubuntu/double-app
npm run build:apk
```

O APK será salvo em: build/double-app.apk

Projeto sem nenhuma modificação funcional, apenas scripts de build adicionados.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "format": "prettier --write .",
     "test": "vitest run",
     "db:push": "drizzle-kit generate && drizzle-kit migrate",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "qr": "node scripts/generate_qr.mjs"
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "qr": "node scripts/generate_qr.mjs",
+    "build:apk": "node scripts/build-apk.js",
+    "build:apk:eas": "eas build --platform android --local"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
