--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "format": "prettier --write .",
     "test": "vitest run",
     "db:push": "drizzle-kit generate && drizzle-kit migrate",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "qr": "node scripts/generate_qr.mjs",
     "build:apk": "node scripts/build-apk.js",
     "build:apk:eas": "eas build --platform android --local"
@@ -48,7 +48,6 @@
     "expo-keep-awake": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-media-library": "~18.2.1",
-    "expo-navigation-bar": "^5.0.10",
     "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.19",
     "expo-secure-store": "~15.0.8",
